--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!-- Example image URL -->
+<h1>It's My Birthday!</h1>
+<h2>On the 22 september</h2>
+
 <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="bityday cake"/>
 <h3>what to bring</h3>
  <ul>
